tests/samples/negative/generics/generic_impl_method_uninferred_param.ax
module generic_impl_method_uninferred_param;

struct Box<T> {
    value: T;
}

impl<T, U> Box<T> {
    fn hidden(self: *const Box<T>) -> T {
        return self.value;
    }
}

fn main() -> i32 {
    var box: Box<i32> = Box { value: 1 };
    return box.hidden();
}
